# drm

./: .makefile  Makefile  README  cap_test.c  drm_gem.h  drmsend.c  egl_headless.c  egl_headless2  egl_headless2.c  enum  enum2  enum2.c  enum2.h  fb_dump.c  get_x11_res  get_x11_res.c  get_x11_res.h  grab  grab.c  grab2.c  hei  kmsgrab.c  ole.c  prime-dumb-kms.c  read  read.c  tags  test-drm-prime-dumb-kms.c  test.c  test2.c
gstreamer-plug/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  autogen.sh  config.h  config.status  configure  configure.ac  fakedmabufsrc  filedes  gstfakedmabufsrc.c  gstfakedmabufsrc.h  libgstfakedmabufsrc.la  libgstfakedmabufsrc_la-gstfakedmabufsrc.lo  libtool  tags
gstreamer-plug/.deps/: libgstfakedmabufsrc_la-gstfakedmabufsrc.Plo
gstreamer-plug/.libs/: libgstfakedmabufsrc.la  libgstfakedmabufsrc.lai  libgstfakedmabufsrc.so.0.0.0
gstreamer-plug/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
gstreamer-plug/test/: fakedmabuf-stream  fakedmabuf-stream.c
modeset/: modeset  modeset-double-buffered  modeset-vsync
shmem/: client  client.c  compile.sh  compile2.sh  compile3.sh  drm_client  drm_client.c  drm_client2  drm_client2.c  drm_client3  drm_client3.c  drm_client_tcp  drm_client_tcp.c  drm_server  drm_server.c  drm_server2  drm_server2.c  drm_server3  drm_server3.c  server  server.c  socket_to_tcp.sh
